Monopoly.extension/lib/error_log.txt
Traceback (most recent call last):
  File "C:\Users\szhang\github\Revit-Monopoly\Monopoly.extension\lib\ERROR_HANDLE.py", line 14, in wrapper
    out = func(*args, **kwargs)
  File "C:\Users\szhang\github\Revit-Monopoly\Monopoly.extension\Monopoly.tab\Game.panel\Game.pushbutton\game_script.py", line 110, in init_data_grid
    from AGENT.PLAYER import Player
  File "C:\Users\szhang\github\Revit-Monopoly\Monopoly.extension\lib\AGENT\PLAYER.py", line 36
    def __init__(self, name : str, team: Team, character: str):
                            ^
SyntaxError: unexpected token ':'


######If you have EnneadTab UI window open, just close the window. Do no more action, otherwise the program might crash.##########
#########Not sure what to do? Msg Sen Zhang, you have dicovered a important bug and we need to fix it ASAP!!!!!########